--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -16,7 +16,7 @@
     scrollbar-width: none;
 }
 
-.sidebar img {
+.refresh-icon {
     position: fixed;
     top: 20px;
     right: 20px;
@@ -26,7 +26,7 @@
 }
 
 @media (prefers-color-scheme: dark) {
-    .sidebar img {
+    .refresh-icon {
         filter: grayscale(1) brightness(0.8) invert(1); /* #ccc for dark mode */
     }
 }
@@ -66,6 +66,16 @@
     color: #007bff;
     margin-top: 0;
     padding-top: 0;
+}
+
+.snow-icon {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    pointer-events: none;
 }
 
 .search-bar {
