--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -3,7 +3,7 @@
     left: 0;
     margin: 0;
     width: 250px;
-    background-color: light-dark(rgba(17, 17, 17, 0.85), rgba(25, 25, 25, 0.85));
+    background-color: light-dark(rgba(30, 30, 30, 0.85), rgba(25, 25, 25, 0.85));
     color: #fff;
     padding: 20px;
     height: 100%;
@@ -14,6 +14,7 @@
     transition: transform 0.3s ease-in-out;
     transform: translateX(-100%);
     scrollbar-width: none;
+    background-image: url('snow.gif');
 }
 
 .refresh-icon {
@@ -22,13 +23,8 @@
     right: 20px;
     width: 20px;
     height: 20px;
-    filter: grayscale(1) brightness(0);
-}
-
-@media (prefers-color-scheme: dark) {
-    .refresh-icon {
-        filter: grayscale(1) brightness(0.8) invert(1); /* #ccc for dark mode */
-    }
+    filter: grayscale(1) brightness(0.8) invert(1);
+    cursor: pointer;
 }
 
 .rotate {
@@ -66,16 +62,6 @@
     color: #007bff;
     margin-top: 0;
     padding-top: 0;
-}
-
-.snow-icon {
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    pointer-events: none;
 }
 
 .search-bar {
@@ -123,7 +109,7 @@
     left: 290px;
     font-size: 20px;
     cursor: pointer;
-    background-color: light-dark(rgba(17, 17, 17, 0.85), rgba(25, 25, 25, 0.85));
+    background-color: light-dark(rgba(30, 30, 30, 0.85), rgba(25, 25, 25, 0.85));
     color: white;
     padding: 10px 18px;
     border: none;
