--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -14,7 +14,7 @@
     transition: transform 0.3s ease-in-out;
     transform: translateX(-100%);
     scrollbar-width: none;
-    background-image: url('snow.gif');
+    background-image: url('/snow.gif');
 }
 
 .refresh-icon {
