--- a/src/css/songtable.css
+++ b/src/css/songtable.css
@@ -71,3 +71,8 @@
     border: 1px solid light-dark(black, #ccc);
     padding: 2px;
 }
+
+.actions-container div:hover {
+    background-color: light-dark(#e0e0e0, #333) !important;
+    cursor: pointer;
+}
