--- a/src/css/songtable.css
+++ b/src/css/songtable.css
@@ -76,3 +76,8 @@
     background-color: light-dark(#e0e0e0, #333) !important;
     cursor: pointer;
 }
+
+.title-link {
+    text-decoration: underline dotted;
+    cursor: pointer;
+}
